Fixed Bug #35014 (array_product() always returns 0).